# imperator

./: README.md  imperator.cabal
app/: Main.hs
examples/: basic_math.dsl  number_prompt.dsl  number_prompt_with_conditional.dsl  parse_error.dsl  requirement.dsl  vars_101.dsl
src/Imperator/: Interpreter.hs  Parser.hs  Syntax.hs  Util.hs
