name:                imperator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iostat/imperator#readme
license:             BSD3
license-file:        LICENSE
author:              Ilya Ostrovskiy
maintainer:          firstname at 200proof dot cc
copyright:           2017 Ilya Ostrovskiy
category:            DSL
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Imperator.Interpreter
                     , Imperator.Parser
  other-modules:       Imperator.Syntax
                     , Imperator.Util
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , either
                     , data-default
                     , data-default-instances-containers
                     , lens
                     , mtl
                     , parsec
                     , time
  default-language:    Haskell2010

executable imperator
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , imperator
                     , show-prettyprint
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iostat/imperator
